--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   },
   "dependencies": {
     "express": "^4.17.1",
-    "morgan": "^1.10.0"
+    "knex": "^0.95.2",
+    "morgan": "^1.10.0",
+    "pg": "^8.5.1"
   }
 }
