--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,9 +9,13 @@
   },
   "plugins": ["prettier"],
   "extends": ["airbnb-base", "plugin:prettier/recommended"],
+  "settings": {
+    "import/resolver": {
+      "babel-module": {}
+    }
+  },
   "rules": {
     "no-console": "off",
-    "no-unused-vars": ["error", { "argsIgnorePattern": "^_" }],
-    "import/extensions": "off"
+    "no-unused-vars": ["error", { "argsIgnorePattern": "^_" }]
   }
 }
