--- a/package.json
+++ b/package.json
@@ -1,21 +1,27 @@
 {
   "name": "the-beauty-of-science-api",
   "version": "0.1.0",
-  "description": "",
-  "main": "server.js",
-  "type": "module",
+  "private": true,
   "scripts": {
-    "start": "PORT=3000 node server.js",
-    "start:dev": "PORT=3000 nodemon server.js",
+    "start": "npm run build && env-cmd node dist",
+    "dev": "env-cmd -f .env.dev nodemon --exec babel-node src",
     "lint": "eslint .",
-    "lint:fix": "eslint --fix ."
+    "lint:fix": "eslint --fix .",
+    "build": "babel src -d dist -D --quiet --delete-dir-on-start"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/cli": "^7.13.10",
+    "@babel/core": "^7.13.10",
+    "@babel/node": "^7.13.10",
+    "@babel/polyfill": "^7.12.1",
+    "@babel/preset-env": "^7.13.10",
+    "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^7.19.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^7.2.0",
+    "eslint-import-resolver-babel-module": "^5.2.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.1",
     "husky": "^4.3.8",
@@ -24,6 +30,8 @@
     "prettier": "2.2.1"
   },
   "dependencies": {
+    "chalk": "^4.1.0",
+    "env-cmd": "^10.1.0",
     "express": "^4.17.1",
     "knex": "^0.95.2",
     "morgan": "^1.10.0",
