--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "chalk": "^4.1.0",
+    "cors": "^2.8.5",
     "env-cmd": "^10.1.0",
     "express": "^4.17.1",
     "knex": "^0.95.2",
