--- a/package.json
+++ b/package.json
@@ -30,12 +30,15 @@
     "prettier": "2.2.1"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "chalk": "^4.1.0",
     "cors": "^2.8.5",
     "env-cmd": "^10.1.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.95.2",
     "morgan": "^1.10.0",
-    "pg": "^8.5.1"
+    "pg": "^8.5.1",
+    "redis": "^3.0.2"
   }
 }
