--- a/.env.dev
+++ b/.env.dev
@@ -1,6 +1,14 @@
-NODE_ENV=development
+NODE_ENV='development'
 PORT=5000
 
-JWT_SECRET=jwt_secret
-JWT_EXPIRE=30d
-JWT_COOKIE_EXPIRE=30
+JWT_SECRET='jwt_secret'
+JWT_EXPIRE='30d'
+JWT_COOKIE_EXPIRE='30'
+
+REDIS_HOST='127.0.0.1'
+REDIS_PORT=6379
+
+DB_HOST='127.0.0.1'
+DB_USERNAME='user01'
+DB_PASSWORD='user01'
+DB_NAME='the_beauty_of_science'
