--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,8 +1,9 @@
 {
   "compilerOptions": {
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
     "baseUrl": "./src",
     "paths": {
-      "@secrets": ["./utils/secrets"],
       "@": ["./src"]
     }
   },
