--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
   "devDependencies": {
     "@babel/cli": "^7.13.10",
     "@babel/core": "^7.13.10",
+    "@babel/eslint-parser": "^7.13.10",
     "@babel/node": "^7.13.10",
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "@babel/plugin-proposal-decorators": "^7.13.5",
+    "@babel/plugin-proposal-private-methods": "^7.13.0",
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.13.10",
     "babel-plugin-module-resolver": "^4.1.0",
@@ -35,10 +39,13 @@
     "cors": "^2.8.5",
     "env-cmd": "^10.1.0",
     "express": "^4.17.1",
+    "express-jwt": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.95.2",
     "morgan": "^1.10.0",
     "pg": "^8.5.1",
-    "redis": "^3.0.2"
+    "redis": "^3.0.2",
+    "reflect-metadata": "^0.1.13",
+    "typedi": "^0.10.0"
   }
 }
