--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "env-cmd": "^10.1.0",
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
+    "http-errors": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.95.2",
     "morgan": "^1.10.0",
