--- a/.env.dev
+++ b/.env.dev
@@ -1,9 +1,10 @@
 NODE_ENV='development'
 PORT=5000
 
+JWT_ALGORITHM='HS256'
 JWT_SECRET='jwt_secret'
-JWT_EXPIRE='30d'
-JWT_COOKIE_EXPIRE='30'
+JWT_EXPIRE_ACCESS=0.5
+JWT_EXPIRE_REFRESH=336
 
 REDIS_HOST='127.0.0.1'
 REDIS_PORT=6379
