--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.95.2",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "pg": "^8.5.1",
     "redis": "^3.0.2",
     "reflect-metadata": "^0.1.13",
