--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,6 +3,15 @@
     "browser": true,
     "es2021": true
   },
+  "overrides": [
+    {
+      "files": ["**/*.test.js"],
+      "env": {
+        "jest": true
+      },
+      "plugins": ["prettier", "jest"]
+    }
+  ],
   "parserOptions": {
     "ecmaVersion": 12,
     "sourceType": "module"
