--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "env-cmd -f .env.dev nodemon --exec babel-node src",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
-    "build": "babel src -d dist -D --quiet --delete-dir-on-start"
+    "build": "babel src -d dist -D --quiet --delete-dir-on-start",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -21,14 +22,17 @@
     "@babel/plugin-proposal-private-methods": "^7.13.0",
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.13.10",
+    "babel-jest": "^26.6.3",
     "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^7.19.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^7.2.0",
     "eslint-import-resolver-babel-module": "^5.2.0",
     "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.3.2",
     "eslint-plugin-prettier": "^3.3.1",
     "husky": "^4.3.8",
+    "i": "^0.3.6",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.3",
     "nodemon": "^2.0.7",
