--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
     "build": "babel src -d dist -D --quiet --delete-dir-on-start",
-    "test": "jest"
+    "test": "./postgres/create_tables.sh && env-cmd jest",
+    "coverage": "./postgres/create_tables.sh && env-cmd jest --coverage"
   },
   "author": "",
   "license": "ISC",
