--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "env-cmd -f .env.dev nodemon --exec babel-node src",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
-    "build": "babel src -d dist -D --quiet --delete-dir-on-start",
+    "build": "babel src -d dist -D --quiet && cp .env dist/.env",
     "test": "./postgres/create_tables.sh && env-cmd -f .env.dev jest",
     "coverage": "./postgres/create_tables.sh && env-cmd -f .env.dev jest --coverage"
   },
