--- a/.babelrc
+++ b/.babelrc
@@ -13,6 +13,7 @@
   ],
   "plugins": [
     ["@babel/plugin-proposal-decorators", { "legacy": true }],
+    "babel-plugin-parameter-decorator",
     ["@babel/plugin-proposal-class-properties", { "loose" : true }],
     ["@babel/plugin-proposal-private-methods", {"loose": true}],
     [
