--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,1 +1,3 @@
+title: The Beauty of Science API
+description: This is an Express REST API service for 'The Beauty of Science'
 theme: jekyll-theme-slate
