--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "npm run build && env-cmd node dist",
-    "dev": "env-cmd -f .env.dev nodemon --exec babel-node src",
+    "start:dev": "env-cmd -f .env.dev nodemon --exec babel-node src",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
     "build": "babel src -d dist -D --quiet",
