--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "celebrate": "^14.0.0",
     "chalk": "^4.1.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
@@ -54,6 +55,7 @@
     "knex": "^0.95.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "password-validator": "^5.1.1",
     "pg": "^8.5.1",
     "redis": "^3.0.2",
     "reflect-metadata": "^0.1.13",
